get files ready for heroku

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Hotab | Home</title>
+  <title>Hotab | Product</title>
   <link rel="shortcut icon" type="image/jpg" href="./assest/img/fav.png"/>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
@@ -97,14 +97,12 @@
                
                           <!-- Heading -->
                           <div data-aos="zoom-in">
-                            <h2 class="font-weight-bold intor white-text pt-5 mb-2">HOTLAB Solutions</h2>
+                            <h2 class="font-weight-bold intor white-text pt-5 mb-2"> HOTLAB Solutions Products</h2>
 
                             <!-- Divider -->
                             <hr class="hr-light">
           
                             <!-- Description -->
-                            <h4 class="white-text my-4 whatde">A leading firm with utmost specialty in providing your business with the best and most effective of prospects and schemes to make it grow even beyond your imagination.</h4>
-                            <a href="/contactUs.html" type="button" class="btn btn-primary z-depth-5 waves-effect bottn">GET IN TOUCH</a>
                           </div>
                   
                   </div>
@@ -130,161 +128,6 @@
 
 
 
-
-    <!-- companies we work with -->
-<div class="container mt-5" data-aos="zoom-in">
-  <h4 class="text-center top wey">Top companies we worked with</h4>
-  <div class="raw ">
-   
-    <div class="column"><img src="./assest/img/Barter.png" class="img-fluid" alt="Norway"></div>
-    <div class="column"><img src="./assest/img/Busha.png" class="img-fluid" alt="Norway"></div>
-    <div class="column"><img src="./assest/img/Cowrywise.png" class="img-fluid" alt="Norway"></div>
-    <div class="column"><img src="./assest/img/Farmcrowdy.png" class="img-fluid" alt="Norway"></div>
-    <div class="column"><img src="./assest/img/Farmcrowdy-1.png" class="img-fluid" alt="Norway"></div>
-    <div class="column"><img src="./assest/img/Farmcrowdy-2.png" class="img-fluid" alt="Norway"></div>  
-  </div>
-</div>
-<!-- companies we work with -->
-
-
-
-
-<div class="container-fluid">
-          <!--Section: Best Features-->
-          <section id="best-features" class="text-center">
-            <div class="coli" data-aos="zoom-in">
-            <!-- Heading -->
-            <h3 class=" font-weight-bold mt-5">About HOTLAB Solutions</h2>
-    
-            <!--Grid row-->
-            <div class="row d-flex justify-content-center">
-    
-              <!--Grid column-->
-              <div class="col-md-8">
-    
-                <!-- Description -->
-                <p class="grey-text whatd">HOTAB Solutions is a leading firm, with utmost specialty in providing your business with the best and most effective of prospects and schemes to make it grow even beyond your imagination. With a clear vision propelled for expansion, we provide exquisite services like business assurance, consultancy, financial advisory, risk advisory, online advertisement and delivery, web and software application deployment services among several other sibling services. 
-                </p>
-                  <a href="" class="font-weight-bold weye">Learn more</a><i class="fa fa-arrow-circle-right blue-text"></i>
-    
-              </div>
-              <!--Grid column-->
-    
-            </div>
-          </div>
-            <!--Grid row-->
-
-             <!-- Heading -->
-             <div data-aos="zoom-in">
-              <h2 class="font-weight-bold mt-5">Our Services</h2>
-              <p class="grey-text whatd">What we offer at HOTLAB Solutions</p>
-             </div>
-            
-
-    
-            <!--Grid row-->
-            <div class="row mt-5">
-              
-              <!--Grid column-->
-              <div class="col-md-3 mb-1" data-aos="fade-up">
-                <img src="./assest/img/Vector.jpg" alt="">
-           
-                <h4 class="my-4 font-weight-bold">Branding</h4>
-                <p class="grey-text whatder">We help business develop amazing identity experience to further announce their virtual presence.</p>
-              </div>
-              <!--Grid column-->
-    
-              <!--Grid column-->
-              <div class="col-md-3 mb-1" data-aos="fade-down">
-                <img src="./assest/img/Vector-2.jpg" alt="">
-                <h4 class="my-4 font-weight-bold">Consultancy</h4>
-                <p class="grey-text whatder">We assits businesses in curtailing any potential risk that might serve as a threat to your business.</p>
-              </div>
-              <!--Grid column-->
-    
-              <!--Grid column-->
-              <div class="col-md-3 mb-1" data-aos="fade-up">
-                <img src="./assest/img/Vector-1.jpg" alt="" srcset="">
-                <h4 class="my-4 font-weight-bold">Web App Development</h4>
-                <p class="grey-text whatder">We help businesses establish and strengthen their online presence and help attain optimum returns on investment.</p>
-              </div>
-              <!--Grid column-->
-              
-
-               <!--Grid column-->
-               <div class="col-md-3 mb-1" data-aos="fade-down">
-               <img src="./assest/img/Vector-4.jpg" alt="" srcset="">
-                <h4 class="my-4 font-weight-bold">Webinars</h4>
-                <p class="grey-text whatder">We help businesses create stunning webinars as a point of attraction for your clients to promote your services.</p>
-              </div>
-              <!--Grid column-->
-
-             
-    
-            </div>
-            <!--Grid row-->
-    
-          </section>
-         
-            <div class="font-weight-bold text-center">
-              <a href="http://" class="weye">Learn more</a>
-              <i class="fa fa-arrow-circle-right blue-text"></i>
-            </div>
-        
-      
-</div>
-
-
-
-<!-- blog section -->
-<div class="colo" >
-<div class="container mt-5">
-  <div class="text-center" data-aos="zoom-in">
-    <h2 class="font-weight-bold">Blog</h2>
-    <p class="gray-text ttt">Recent Articles from our blog</p>
-  </div>
-
-
-    <!-- grid row -->
-    <div class="row">
-          <!-- grid column -->
-              <div class="col-md-4 mb-4 text-center" data-aos="fade-down">
-                    <img src="./assest/img/bgee (2).png" class="img-fluid ime z-depth-1" alt="" srcset="">
-                    <h5 class="font-weight-bold mt-3 intore">Importance of branding to business</h5>
-                    <p class="whatd">Businesses can be for profit or they can be organisations that operate to fufil a charity mission or further a social cause</p>
-                    <a href="http://" class="font-weight-bold weye">Read more</a><i class="fa fa-arrow-circle-right blue-text"></i>
-              </div>
-          <!-- grid column -->
-
-           <!-- grid column -->
-           <div class="col-md-4 mb-4 text-center" data-aos="fade-up">
-            <img src="./assest/img/bgee (3).png" class="img-fluid ime z-depth-1" alt="" srcset="">
-            <h6 class="font-weight-bold mt-3 intore">Concept of business Consultancy</h6>
-                    <p class="whatd">Businesses can be for profit or they can be organisations that operate to fufil a charity mission or further a social cause</p>
-                    <a href="http://" class="font-weight-bold weye">Read more</a><i class="fa fa-arrow-circle-right blue-text"></i>
-            </div>
-        <!-- grid column -->
-
-                 <!-- grid column -->
-              <div class="col-md-4 text-center" data-aos="fade-down">
-                <img src="./assest/img/bgee (4).png" class="img-fluid ime z-depth-1" alt="" srcset="">
-                <h5 class="font-weight-bold mt-3 intore">Marketing as a profit catalyst</h5>
-                    <p class="whatd">Businesses can be for profit or they can be organisations that operate to fufil a charity mission or further a social cause</p>
-                    <a href="http://" class="font-weight-bold weye">Read more</a><i class="fa fa-arrow-circle-right blue-text"></i>
-
-                </div>
-            <!-- grid column -->
-    </div>
-    <!-- grid row -->
-
-
-    <div class="text-center mt-3" id="contactus" >
-      <!-- <a href="http://" class="btn btn-primary weye">View all<i class="fa white-text fa-arrow-circle-right blue-text"></i></a> -->
-      <button class="btn btn-primary font-weight-bold">View all<i class="fa white-text fa-arrow-circle-right blue-text"></i></button>
-    </div>
-    </div> 
-</div>
-<!-- blog section -->
 
 
 
