--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html class="htmle" lang="en">
 
@@ -7,16 +5,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Our Services</title>
+  <title>HOTABS | Services</title>
+  <link rel="shortcut icon" type="image/jpg" href="./assest/img/fav.png"/>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <!-- Bootstrap core CSS -->
-  <link href="./assest/home/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./assest/css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
-  <link href="./assest/home/css/mdb.min.css" rel="stylesheet">
+  <link href="./assest/css/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link href="./assest/home/css/style.css" rel="stylesheet">
+  <link href="./assest/css/style.css" rel="stylesheet">
 </head>
 
 <body class="what bodye">
@@ -30,7 +29,7 @@
       <div class="container">
 
         <!-- Navbar brand -->
-        <a class="navbar-brand font-weight-bold black-text fadeInDown animated slow" href="index.html"><img style="width: 6em;" src="./assest/home/img/logo2.png"  alt=""></a>
+        <a class="navbar-brand font-weight-bold black-text fadeInDown animated slow" href="index.html"><img style="width: 10em;" src="./assest/img/logo2.png"  alt=""></a>
 
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -43,27 +42,24 @@
 
           <!-- Links -->
           <ul class="navbar-nav ml-auto">
-            
-            <li class="nav-item pr-3">
-              <a class="nav-link black-text whatd font-weight-bold" href="index.html">Home</a>
+            <li class="nav-item pr-3  fadeInDown animated slow">
+              <a class="nav-link black-text whatd font-weight-bold" href="/">Home</a>
             </li>
-
-            <li class="nav-item pr-3">
+            <li class="nav-item pr-3  fadeInDown animated slow">
               <a class="nav-link black-text whatd font-weight-bold" href="aboutus.html">About Us</a>
             </li>
-            <li class="nav-item pr-3">
+            <li class="nav-item pr-3  fadeInDown animated slow">
               <a class="nav-link black-text  whatd  font-weight-bold" href="services.html">Our Service</a>
             </li>
-            <li class="nav-item pr-3">
+            <li class="nav-item pr-3  fadeInDown animated slow">
               <a class="nav-link black-text  whatd  font-weight-bold" href="blog.html">Blog</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link black-text  whatd  font-weight-bold" href="index.html?#contactus">Contact</a>
+            <li class="nav-item  fadeInDown animated slow">
+              <a class="nav-link black-text  whatd  font-weight-bold" href="/contactus.html">Contact</a>
             </li>
-
-
-            
-
+            <li class="nav-item  fadeInDown animated slow">
+              <a class="nav-link black-text  whatd  font-weight-bold" href="/product.html">Products</a>
+            </li>
           </ul>
           <!-- Links -->
 
@@ -108,31 +104,29 @@
 
 
 
-        <!-- branding>
-        <div class="row">
+        <!-- branding-->
             <div class="col-md-6 mb-5 fadeInLeft animated slow">
-                <img src="./assest/home/img/Image (1).png" alt="">
-                
-                <h4 class="my-4 heading">Consultancy</h4>
-                <p class="grey-text dear">Here in HOTAB Solutions, we are ever ready to assist you in curtailing any potential risk that might serve as a threat to your business. With our ever vibrant professionals, you can equally be rest assured of delightful travel experiences through best choice mediums, favorable dates and fantastic discounts. </p>
+                <img src="./assest/img/Vector.jpg" alt="">
+           
+                <h4 class="my-4 heading">Branding</h4>
+                <p class="grey-text dear">Here at HOTAB Solutions, we help business develop amazing identity experience to further announce their virtual presence. Be rest assured that we would position your products to the right clients and equally convince them on why it's the best choice.</p>
             </div>
       
          <div class="col-md-6 mb-5 fadeInRight animated slow">
-                <img src="./assest/home/img/Vector-4.jpg" class="img-fluid text-center z-depth-2" alt="" srcset="">
+                <img src="./assest/img/Image.png" class="img-fluid text-center z-depth-2" alt="" srcset="">
         </div>
-      </div>
-      <branding -->
+      <!-- branding -->
 
 
-        <!-- consultancy -->
+        <!-- consultancy-->
         <div class="col-md-6 mb-5" data-aos="zoom-in">
-            <img src="./assest/home/img/Image (1).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
+            <img src="./assest/img/Image (1).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
         </div>
   
 
      
      <div class="col-md-6 mb-5" data-aos="zoom-in">
-        <img src="./assest/home/img/Vector-4.jpg" alt="">
+        <img src="./assest/img/Vector-4.jpg" alt="">
        
         <h4 class="my-4 heading">Consultancy</h4>
         <p class="grey-text dear">Here in HOTAB Solutions, we are ever ready to assist you in curtailing any potential risk that might serve as a threat to your business. With our ever vibrant professionals, you can equally be rest assured of delightful travel experiences through best choice mediums, favorable dates and fantastic discounts. </p>
@@ -143,7 +137,7 @@
 
   <!-- Webinar-->
   <div class="col-md-6 mb-5" data-aos="fade-right">
-    <img src="./assest/home/img/Vector-2.jpg" alt="">
+    <img src="./assest/img/Vector-2.jpg" alt="">
 
     <h4 class="my-4 heading">Webinar</h4>
     <p class="grey-text dear">We will, from time to time, help you create stunning webinars as a point of attraction for your clients to promote your services, update them on upgrades, garner real-time responses for evaluation and equally earn with ease while practically soft selling. </p>
@@ -152,34 +146,34 @@
 
 
 <div class="col-md-6 mb-5" data-aos="fade-left">
-    <img src="./assest/home/img/Image (2).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
+    <img src="./assest/img/Image (2).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
 
 </div>
 <!--Webinar-->
 
 
 
- <!-- Online Tranings --->
+ <!-- Online Tranings-->
  <div class="col-md-6 mb-5" data-aos="zoom-in">
-    <img src="./assest/home/img/Image (3).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
+    <img src="./assest/img/Image (3).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
    
 </div>
 
 
 
 <div class="col-md-6 mb-5" data-aos="zoom-in">
-    <img src="./assest/home/img/Vector-8.png" alt="">
+    <img src="./assest/img/Vector-8.png" alt="">
     <h4 class="my-4 heading">Online Tranings</h4>
     <p class="grey-text dear">At an extremely flexible workstate, we would guide you with online trainings that are certain to bring in jawdroppping turnovers while making sure that your business is not left out in the giobal village Dynamics.</p>
 </div>
-<!-- Online Tranings-->
+<!--Online Tranings-->
 
 
 
 
- <!-- Web Application Developent --->
+ <!-- Web Application Developent-->
  <div class="col-md-6 mb-5" data-aos="fade-right">
-    <img src="./assest/home/img/Vector-1.jpg" alt="">
+    <img src="./assest/img/Vector-1.jpg" alt="">
 
     <h4 class="my-4 heading">Web Application Developent</h4>
     <p class="grey-text dear">With one of our concerns being a conducive selling point, we are ever ready to assist you in creating hitch free websites that could pass as a virtual market, of which your clients are at liberty to transact seamlessly and even enjoy ample response rate.</p>
@@ -188,35 +182,35 @@
 
 
 <div class="col-md-6 mb-5" data-aos="fade-left">
-    <img src="./assest/home/img/Image (4).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
+    <img src="./assest/img/Image (4).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
 
 </div>
-<!-- Web Application Developent-->
+<!--Web Application Developent-->
 
 
-<!-- Mobile Application Development -->
+<!-- Mobile Application Development-->
 <div class="col-md-6 mb-5" data-aos="zoom-in">
-    <img src="./assest/home/img/Image (5).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
+    <img src="./assest/img/Image (5).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
    
 </div>
 
 
 
 <div class="col-md-6 mb-5" data-aos="zoom-in">
-    <img src="./assest/home/img/Vector-9.png" alt="">
+    <img src="./assest/img/Vector-9.png" alt="">
 
     <h4 class="my-4 heading">Mobile Application Development</h4>
     <p class="grey-text dear">The expert team at HOTAB Solutions are ever ready to help you disseminate informations, push notifications and create an interactive, engaging medium with your clients through easy peasy, wireless softwares.</p>
 
 </div>
-<!-- Mobile Application Development-->
+<!--Mobile Application Development-->
 
 
 
 
- <!--Bulk SMS -->
+ <!--Bulk SMS-->
  <div class="col-md-6 mb-5" data-aos="fade-right">
-    <img src="./assest/home/img/Vector-10.png" alt="">
+    <img src="./assest/img/Vector-10.png" alt="">
 
     <h4 class="my-4 heading">Bulk SMS</h4>
     <p class="grey-text dear">We can help you top up your competitive edge, through low cost information medium package that can reach a vast number of people within the speed of light. With 80% audience rate response quite guaranteed, you would even enjoy super return on investments, as opposed to traditional publishing. </p>
@@ -225,39 +219,39 @@
 
 
 <div class="col-md-6 mb-5" data-aos="fade-left">
-    <img src="./assest/home/img/Image (4).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
+    <img src="./assest/img/Image (4).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
 
 </div>
-<!-- Bulk SMS-->
+<!--Bulk SMS-->
 
 
 
 
-<!-- Internet Advert -->
+<!-- Internet Advert-->
 <div class="col-md-6 mb-5" data-aos="zoom-in">
-    <img src="./assest/home/img/Image (7).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
+    <img src="./assest/img/Image (7).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
    
 </div>
 
 
 
 <div class="col-md-6 mb-5" data-aos="zoom-in">
-    <img src="./assest/home/img/Vector-11.png" alt="">
+    <img src="./assest/img/Vector-11.png" alt="">
 
     <h4 class="my-4 heading">Internet Advert</h4>
     <p class="grey-text dear">With enough availability of well tailored strategies for publicity, we'd help get across to your customers using the digital media. We can assure you of being able to cover demographic statistics and equally influence your client's purchase psychology.</p>
 
 </div>
-<!-- Internet Advert-->
+<!--Internet Advert-->
 
 
 
 
 
 
-<!--Jobs -->
+<!--Jobs-->
 <div class="col-md-6 mb-5" data-aos="fade-right">
-    <img src="./assest/home/img/Vector-12.png" alt="">
+    <img src="./assest/img/Vector-12.png" alt="">
 
     <h4 class="my-4 heading">Jobs</h4>
     <p class="grey-text dear">Having recognised how vital smooth work flow is to your business growth, we'd consistently inculcate ethics, work values and the need for transparency into your work environment, this would no doubt birth low turnovers and daunting innovations needed to accelerate your business to the next stage. </p>
@@ -266,26 +260,12 @@
 
 
 <div class="col-md-6 mb-5" data-aos="fade-left">
-    <img src="./assest/home/img/Image (8).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
+    <img src="./assest/img/Image (8).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
 
 </div>
-<!-- Jobs-->
-<!-- ------------------ -->
+<!--Jobs-->
 
 
-<!-- <div class="col-md-6 mb-5" data-aos="zoom-in">
-  <img src="./assest/home/img/Image (7).png" class="img-fluid text-center z-depth-2" alt="" srcset="">
-</div>
-
-
-
-<div class="col-md-6 mb-5" data-aos="zoom-in">
-  <img src="./assest/home/img/Vector-11.png" alt="">
-
-  <h4 class="my-4 heading">Internet Advert</h4>
-  <p class="grey-text dear">With enough availability of well tailored strategies for publicity, we'd help get across to your customers using the digital media. We can assure you of being able to cover demographic statistics and equally influence your client's purchase psychology.</p>
-
-</div> -->
 
 
 
@@ -354,7 +334,7 @@
         <!-- Links -->
         <!-- <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5> -->
         <div class="mt-3">
-          <img style="width: 6em;" src="./assest/home/img/logo2.png" alt=""><span class="">
+          <img src="./assest/img/logo2.png" style="width: 10em;" alt=""><span class="">
           <p class="mt-2 black-text">A leading firm, with utmost specialty in providing your business with the best and most effective of prospects and schemes to make it grow even beyond your imagination.</p>
         </div>
        
@@ -382,7 +362,7 @@
             <a href="#!" class="black-text">Blog</a>
           </li>
           <li>
-            <a href="#!" class="black-text">Contact Us</a>
+            <a href="index.html?contactus" class="black-text">Contact Us</a>
           </li>
         </ul>
 
@@ -399,16 +379,16 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!" class="black-text"><img src="./assest/home/img/Path.png" alt="" srcset=""> Facebook</a>
+            <a href="#!" class="black-text"><img src="./assest/img/Path.png" alt="" srcset=""> Facebook</a>
           </li>
           <li>
-            <a href="#!" class="black-text"><img src="./assest/home/img/twitter.png" alt="" srcset=""> Twitter</a>
+            <a href="#!" class="black-text"><img src="./assest/img/twitter.png" alt="" srcset=""> Twitter</a>
           </li>
           <li>
-            <a href="#!" class="black-text"><img src="./assest/home/img/email.png" alt="" srcset=""> Email</a>
+            <a href="#!" class="black-text"><img src="./assest/img/email.png" alt="" srcset=""> Email</a>
           </li>
           <li>
-            <a href="#!" class="black-text"><img src="./assest/home/img/call.png" alt="" srcset="">  +2348181400105</a>
+            <a href="#!" class="black-text"><img src="./assest/img/call.png" alt="" srcset="">  +2348181400105</a>
           </li>
         </ul>
 
@@ -457,14 +437,14 @@
     AOS.init();
   </script>
   <!-- JQuery -->
-  <script type="text/javascript" src="./assest/home/js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="./assest/home/js/popper.min.js"></script>
+  <script type="text/javascript" src="js/popper.min.js"></script>
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="./assest/home/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="./assest/home/js/mdb.min.js"></script>
-  <script src="./assest/home/js/scripts.js"></script>
+  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script src="js/scripts.js"></script>
   <!-- <script src="js/top.js"></script> -->
 </body>
 
